#0000 add student feature based on MVC

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/GestionEtudiants.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.DateChooser.jar=/Users/walidsassi/Downloads/jdatechooser/DateChooser.jar
+file.reference.jcalendar-1.4.jar=/Users/walidsassi/Downloads/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.DateChooser.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
